--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,18 @@
-<mat-card class="example-card">
-  <mat-card-header>
-    <mat-card-title>work out category</mat-card-title>
-    <mat-card-subtitle>description</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <p>list of work outs</p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button  color="primary"> add work out</button>
-  </mat-card-actions>
-</mat-card>
+<div>
+  <mat-card class="example-card" *ngFor="let category of workOutCategoryList">
+    <mat-card-header>
+      <mat-card-title>{{category.categoryName}}</mat-card-title>
+      <mat-card-subtitle>{{category.description}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>go to work outs</p>
+      <input type = "text" placeholder="enter workout name" [(ngModel)]="newWorkOut" *ngIf="enableAddWorkOutInput"/>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button  color="primary" (click)="addWorkOut(category)">add work out </button>
+    </mat-card-actions>
+  </mat-card>
+</div>
+
 
 
